--- a/Source/Shapes/CompoundShape.xaml
+++ b/Source/Shapes/CompoundShape.xaml
@@ -15,7 +15,7 @@
             Canvas.Left="{x:Bind Left, Mode=OneWay}" 
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
             Stretch="{x:Bind ViewStretch, Mode=OneWay}" 
-            RenderTransformOrigin="0.5,0.5">
+            RenderTransformOrigin="0.0, 0.0">
             
             <Viewbox.RenderTransform>
                 <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" ScaleY="{x:Bind ScaleY, Mode=OneWay}"/>
