added scale to EllipseShape and RectangleShape

--- a/Source/Shapes/RectangleShape.xaml
+++ b/Source/Shapes/RectangleShape.xaml
@@ -10,11 +10,18 @@
     d:DesignWidth="400">
 
     <Canvas>
+        
         <Viewbox
             x:Name="_viewbox"
             Canvas.Left="{x:Bind Left, Mode=OneWay}" 
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
-            Stretch="{x:Bind ViewStretch, Mode=OneWay}">
+            Stretch="{x:Bind ViewStretch, Mode=OneWay}"
+            RenderTransformOrigin="0.0, 0.0">
+
+            <Viewbox.RenderTransform>
+                <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" ScaleY="{x:Bind ScaleY, Mode=OneWay}"/>
+            </Viewbox.RenderTransform>
+            
             <Path
                 x:Name="_path"
                 Width="{x:Bind Length, Mode=OneWay}"
@@ -22,13 +29,21 @@
                 Stroke="{x:Bind Stroke, Mode=OneWay}"
                 Fill="{x:Bind Fill, Mode=OneWay}"
                 Stretch="{x:Bind PathStretch, Mode=OneWay}">
+                
                 <Path.Data>
+                    
                     <GeometryGroup FillRule="{x:Bind FillRule, Mode=OneWay}">
+                        
                         <RectangleGeometry x:Name="_rectGeometry" Rect="0,0,100,100" />
+                        
                     </GeometryGroup>
+                    
                 </Path.Data>
+                
             </Path>
+            
         </Viewbox>
+        
     </Canvas>
 
 </UserControl>
