--- a/Source/Shapes/EllipseShape.xaml
+++ b/Source/Shapes/EllipseShape.xaml
@@ -14,7 +14,13 @@
             x:Name="_viewbox"
             Canvas.Left="{x:Bind Left, Mode=OneWay}" 
             Canvas.Top="{x:Bind Top, Mode=OneWay}"
-            Stretch="{x:Bind ViewStretch, Mode=OneWay}">
+            Stretch="{x:Bind ViewStretch, Mode=OneWay}"
+            RenderTransformOrigin="0.0, 0.0">
+
+            <Viewbox.RenderTransform>
+                <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" ScaleY="{x:Bind ScaleY, Mode=OneWay}"/>
+            </Viewbox.RenderTransform>
+            
             <Path 
                 x:Name="_path"
                 Width="{x:Bind Length, Mode=OneWay}"
@@ -22,13 +28,21 @@
                 Stroke="{x:Bind Stroke, Mode=OneWay}"
                 Fill="{x:Bind Fill, Mode=OneWay}"
                 Stretch="{x:Bind PathStretch, Mode=OneWay}">
+                
                 <Path.Data>
+                    
                     <GeometryGroup FillRule="{x:Bind FillRule, Mode=OneWay}">
+                        
                         <EllipseGeometry Center="100, 100" RadiusX="100" RadiusY="100" />
+                        
                     </GeometryGroup>
+                    
                 </Path.Data>
+                
             </Path>
+            
         </Viewbox>
+        
     </Canvas>
 
 </UserControl>
