--- a/Source/DrawArea/Controls/CanvasControl.xaml
+++ b/Source/DrawArea/Controls/CanvasControl.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="WireFrame.Controls.CanvasControl"
+    x:Class="WireFrame.DrawArea.Controls.CanvasControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WireFrame.Controls"
+    xmlns:local="using:WireFrame.DrawArea.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:shapes="using:WireFrame.Shapes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:shapes="using:WireFrame.DrawArea.Shapes"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
