--- a/Source/Pages/MainPage.xaml
+++ b/Source/Pages/MainPage.xaml
@@ -2,7 +2,7 @@
     x:Class="WireFrame.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WireFrame.Controls"
+    xmlns:local="using:WireFrame.DrawArea.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local1="using:WireFrame.UI.Controls"
     mc:Ignorable="d"
