--- a/Source/DrawArea/Controls/RotationControl.xaml
+++ b/Source/DrawArea/Controls/RotationControl.xaml
@@ -9,29 +9,31 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Canvas x:Name="_canvas">
-        <Ellipse x:Name="_outer_ring_2" Stroke="White" StrokeThickness="1.0"/>
-        <Ellipse x:Name="_outer_ring_1" Stroke="#FF011B8D" Fill="#33011B8D" StrokeThickness="1.0"/>
+    <Canvas>
+        <Grid x:Name="_grid" Width="50" Height="50">
+            <Ellipse HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stroke="White" StrokeThickness="1.0"/>
+            <Ellipse HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2" Stroke="#FF011B8D" Fill="#33011B8D" StrokeThickness="1.0"/>
 
-        <Path x:Name="_path" Fill="#C9011B8D" StrokeThickness="1.0">
-            <Path.Data>
-                <GeometryGroup>
-                    <PathGeometry x:Name="_pathGeometry">
-                        <PathFigure x:Name="_pathFigure" StartPoint="100, 50">
-                            <ArcSegment x:Name="_arcSegment" IsLargeArc="True"
-                                        Point="0, 0"
-                                        Size="10, 10"
-                                        SweepDirection="Clockwise" />
-                            <LineSegment x:Name="_line1" Point="100, 50" />
-                            <LineSegment x:Name="_line2" Point="200, 100" />
-                        </PathFigure>
-                    </PathGeometry>
-                </GeometryGroup>
-            </Path.Data>
-        </Path>
+            <Path x:Name="_path" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2" Fill="#C9011B8D" StrokeThickness="1.0">
+                <Path.Data>
+                    <GeometryGroup>
+                        <PathGeometry x:Name="_pathGeometry">
+                            <PathFigure x:Name="_pathFigure" StartPoint="100, 50">
+                                <ArcSegment x:Name="_arcSegment" IsLargeArc="True"
+                                            Point="0, 0"
+                                            Size="10, 10"
+                                            SweepDirection="Clockwise" />
+                                <LineSegment x:Name="_line1" Point="100, 50" />
+                                <LineSegment x:Name="_line2" Point="200, 100" />
+                            </PathFigure>
+                        </PathGeometry>
+                    </GeometryGroup>
+                </Path.Data>
+            </Path>
 
-        <Ellipse x:Name="_inner_ring" Fill="#FF011B8D"/>
-        
+            <Ellipse Width="2" Height="2" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="#FF011B8D"/>
+        </Grid>
+
     </Canvas>
     
 </UserControl>
