--- a/Source/DrawArea/Controls/RotationControl.xaml
+++ b/Source/DrawArea/Controls/RotationControl.xaml
@@ -35,7 +35,7 @@
         </Grid>
 
         
-        <Grid x:Name="_container" Canvas.Left="{x:Bind Left, Mode=OneWay}" Canvas.Top="{x:Bind Top, Mode=OneWay}" Width="{x:Bind Length, Mode=OneWay}" Height="{x:Bind Breath, Mode=OneWay}" Background="Transparent" BorderBrush="Green" BorderThickness="1" RenderTransformOrigin="0.5,0.5">
+        <Grid x:Name="_rotate_box" Canvas.Left="{x:Bind Left, Mode=OneWay}" Canvas.Top="{x:Bind Top, Mode=OneWay}" Width="{x:Bind Length, Mode=OneWay}" Height="{x:Bind Breath, Mode=OneWay}" Background="Transparent" IsHitTestVisible="True" BorderBrush="Green" BorderThickness="1" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform Rotation="{x:Bind RotationAngle, Mode=OneWay}"/>
             </Grid.RenderTransform>
