--- a/Source/DrawArea/Controls/RotationControl.xaml
+++ b/Source/DrawArea/Controls/RotationControl.xaml
@@ -10,32 +10,27 @@
     d:DesignWidth="400">
 
     <Canvas x:Name="_canvas">
-        <Grid x:Name="_gizmo_grid" Width="50" Height="50">
-            <Ellipse HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stroke="White" StrokeThickness="1.0"/>
-            <Ellipse HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2" Stroke="#FF011B8D" Fill="#33011B8D" StrokeThickness="1.0"/>
 
-            <Path x:Name="_gizmo_path" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="2" Fill="#C9011B8D" StrokeThickness="1.0">
-                <Path.Data>
-                    <GeometryGroup>
-                        <PathGeometry x:Name="_gizmo_pathGeometry">
-                            <PathFigure x:Name="_gizmo_pathFigure" StartPoint="100, 50">
-                                <ArcSegment x:Name="_gizmo_arcSegment" IsLargeArc="True"
-                                            Point="0, 0"
-                                            Size="10, 10"
-                                            SweepDirection="Clockwise" />
-                                <LineSegment x:Name="_gizmo_line_1" Point="100, 50" />
-                                <LineSegment x:Name="_gizmo_line_2" Point="200, 100" />
-                            </PathFigure>
-                        </PathGeometry>
-                    </GeometryGroup>
-                </Path.Data>
-            </Path>
+        <Path x:Name="_gizmo_path" Fill="Aqua" StrokeThickness="1.0">
+            <Path.Data>
+                <GeometryGroup>
+                    <EllipseGeometry RadiusX="11" RadiusY="11" Center="{x:Bind Axis, Mode=OneWay}"/>
+                    <PathGeometry x:Name="_gizmo_pathGeometry">
+                        <PathFigure x:Name="_gizmo_pathFigure" StartPoint="0, 0">
+                            <ArcSegment x:Name="_gizmo_arcSegment" IsLargeArc="True"
+                                    Point="0, 0"
+                                    Size="10, 10"
+                                    SweepDirection="Clockwise" />
+                            <LineSegment x:Name="_gizmo_line_1" Point="0, 0" />
+                            <LineSegment x:Name="_gizmo_line_2" Point="0, 0" />
+                        </PathFigure>
+                    </PathGeometry>
+                </GeometryGroup>
+            </Path.Data>
+        </Path>
 
-            <Ellipse Width="2" Height="2" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="#FF011B8D"/>
-        </Grid>
 
-        
-        <Grid x:Name="_rotate_box" Canvas.Left="{x:Bind Left, Mode=OneWay}" Canvas.Top="{x:Bind Top, Mode=OneWay}" Width="{x:Bind Length, Mode=OneWay}" Height="{x:Bind Breath, Mode=OneWay}" Background="Transparent" IsHitTestVisible="True" BorderBrush="Green" BorderThickness="1" RenderTransformOrigin="0.5,0.5">
+        <Grid x:Name="_rotate_box" Canvas.Left="{x:Bind Left, Mode=OneWay}" Canvas.Top="{x:Bind Top, Mode=OneWay}" Width="{x:Bind Length, Mode=OneWay}" Height="{x:Bind Breath, Mode=OneWay}" Background="Transparent" IsHitTestVisible="True" BorderBrush="Blue" BorderThickness="1" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform Rotation="{x:Bind RotationAngle, Mode=OneWay}"/>
             </Grid.RenderTransform>
