--- a/Source/DrawArea/Controls/RotationControl.xaml
+++ b/Source/DrawArea/Controls/RotationControl.xaml
@@ -30,17 +30,7 @@
         </Path>
 
 
-        <Grid x:Name="_rotate_box" 
-              Canvas.Left="{x:Bind Left, Mode=OneWay}" 
-              Canvas.Top="{x:Bind Top, Mode=OneWay}" 
-              Width="{x:Bind Length, Mode=OneWay}" 
-              Height="{x:Bind Breath, Mode=OneWay}" 
-              Background="Transparent" 
-              IsHitTestVisible="True" 
-              BorderBrush="Blue" 
-              BorderThickness="1" 
-              RenderTransformOrigin="{x:Bind TransformOrigin, Mode=OneWay}">
-            
+        <Grid x:Name="_rotate_box" Canvas.Left="{x:Bind Left, Mode=OneWay}" Canvas.Top="{x:Bind Top, Mode=OneWay}" Width="{x:Bind Length, Mode=OneWay}" Height="{x:Bind Breath, Mode=OneWay}" Background="Transparent" IsHitTestVisible="True" BorderBrush="Blue" BorderThickness="1" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <CompositeTransform Rotation="{x:Bind RotationAngle, Mode=OneWay}"/>
             </Grid.RenderTransform>
