--- a/Source/DrawArea/Controls/MoveResizeControl.xaml
+++ b/Source/DrawArea/Controls/MoveResizeControl.xaml
@@ -20,7 +20,10 @@
               RenderTransformOrigin="{x:Bind TransformOrigin, Mode=OneWay}">
             
             <Grid.RenderTransform>
-                <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" ScaleY="{x:Bind ScaleY, Mode=OneWay}"/>
+                <CompositeTransform CenterX="{x:Bind CenterX, Mode=OneWay}"
+                                    CenterY="{x:Bind CenterY, Mode=OneWay}"
+                                    ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
+                                    ScaleY="{x:Bind ScaleY, Mode=OneWay}" />
             </Grid.RenderTransform>
 
             <Canvas x:Name="_container_canvas" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" />
