--- a/Source/DrawArea/Shapes/EllipseShape.xaml
+++ b/Source/DrawArea/Shapes/EllipseShape.xaml
@@ -18,7 +18,11 @@
             RenderTransformOrigin="{x:Bind TransformOrigin, Mode=OneWay}">
 
             <Viewbox.RenderTransform>
-                <CompositeTransform Rotation="{x:Bind RotationAngle, Mode=OneWay}" ScaleX="{x:Bind ScaleX, Mode=OneWay}" ScaleY="{x:Bind ScaleY, Mode=OneWay}"/>
+                <CompositeTransform CenterX="{x:Bind CenterX, Mode=OneWay}"
+                                    CenterY="{x:Bind CenterY, Mode=OneWay}"
+                                    ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
+                                    ScaleY="{x:Bind ScaleY, Mode=OneWay}"
+                                    Rotation="{x:Bind RotationAngle, Mode=OneWay}"/>
             </Viewbox.RenderTransform>
             
             <Path 
