--- a/Source/DrawArea/Controls/CanvasControl.xaml
+++ b/Source/DrawArea/Controls/CanvasControl.xaml
@@ -56,7 +56,7 @@
 
             <local:MoveResizeControl x:Name="_moveResizeControl" Visibility="Visible" />
 
-            <local:RotationControl x:Name="_rotationControl" Axis="100, 100" Visibility="Visible" />
+            <local:RotationControl x:Name="_rotationControl" Visibility="Visible" />
 
             <local:HighlightControl x:Name="_highlightControl" IsHitTestVisible="False" Visibility="Collapsed" />
 
