--- a/Source/DrawArea/Controls/RotationControl.xaml
+++ b/Source/DrawArea/Controls/RotationControl.xaml
@@ -14,7 +14,7 @@
         <Path x:Name="_gizmo_path" Fill="Aqua" StrokeThickness="1.0">
             <Path.Data>
                 <GeometryGroup>
-                    <EllipseGeometry RadiusX="11" RadiusY="11" Center="{x:Bind Axis, Mode=OneWay}"/>
+                    <EllipseGeometry RadiusX="11" RadiusY="11" Center="{x:Bind GizmoCenter, Mode=OneWay}"/>
                     <PathGeometry x:Name="_gizmo_pathGeometry">
                         <PathFigure x:Name="_gizmo_pathFigure" StartPoint="0, 0">
                             <ArcSegment x:Name="_gizmo_arcSegment" IsLargeArc="True"
