removed CenterX and CenterY as TransformOrigin works same way and basic rotation of gizmo bug fixed

--- a/Source/DrawArea/Shapes/EllipseShape.xaml
+++ b/Source/DrawArea/Shapes/EllipseShape.xaml
@@ -18,9 +18,7 @@
             RenderTransformOrigin="{x:Bind TransformOrigin, Mode=OneWay}">
 
             <Viewbox.RenderTransform>
-                <CompositeTransform CenterX="{x:Bind CenterX, Mode=OneWay}"
-                                    CenterY="{x:Bind CenterY, Mode=OneWay}"
-                                    ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
+                <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
                                     ScaleY="{x:Bind ScaleY, Mode=OneWay}"
                                     Rotation="{x:Bind RotationAngle, Mode=OneWay}"/>
             </Viewbox.RenderTransform>
