--- a/Source/DrawArea/Controls/MoveResizeControl.xaml
+++ b/Source/DrawArea/Controls/MoveResizeControl.xaml
@@ -20,9 +20,7 @@
               RenderTransformOrigin="{x:Bind TransformOrigin, Mode=OneWay}">
             
             <Grid.RenderTransform>
-                <CompositeTransform CenterX="{x:Bind CenterX, Mode=OneWay}"
-                                    CenterY="{x:Bind CenterY, Mode=OneWay}"
-                                    ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
+                <CompositeTransform ScaleX="{x:Bind ScaleX, Mode=OneWay}" 
                                     ScaleY="{x:Bind ScaleY, Mode=OneWay}" />
             </Grid.RenderTransform>
 
